--- a/CrashCrier/CrashCrier-Info.plist
+++ b/CrashCrier/CrashCrier-Info.plist
@@ -27,7 +27,7 @@
 	<key>LSUIElement</key>
 	<true/>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2013 Kevin Wojniak. All rights reserved.</string>
+	<string>Copyright © 2013-2014 Kevin Wojniak. All rights reserved.</string>
 	<key>NSMainNibFile</key>
 	<string>MainMenu</string>
 	<key>NSPrincipalClass</key>
