Add a Copy button to the notification which will copy the contents of the crash report to the clipboard (if alert style in System Prefs is "alert")

--- a/CrashCrier/CrashCrier-Info.plist
+++ b/CrashCrier/CrashCrier-Info.plist
@@ -30,6 +30,8 @@
 	<string>Copyright © 2013-2014 Kevin Wojniak. All rights reserved.</string>
 	<key>NSMainNibFile</key>
 	<string>MainMenu</string>
+	<key>NSUserNotificationAlertStyle</key>
+	<string>alert</string>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
 </dict>
